fix main title position(now center) on mobile

--- a/app/design/frontend/Arteml/penumbra/web/css/source/_extend.less
+++ b/app/design/frontend/Arteml/penumbra/web/css/source/_extend.less
@@ -167,4 +167,8 @@
     text-decoration: underline;
   }
 
+  .page-title {
+    text-align: center;
+  }
+
 }
